--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -268,7 +268,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="/resume/CHANDRASEKAR.D.pdf" download class="download-button">Download My Resume</a><br>
+        <li><a href="/resume/Chandrasekar.D WebDeveloper.pdf" download class="download-button">Download My Resume</a><br>
             
         </li>
 
@@ -434,7 +434,7 @@
 <section class="resume-container">
     <h2>My Resume</h2>
     <iframe src="./resume/CHANDRASEKAR.D.pdf" type="application/pdf"></iframe>
-    <a href="resume/CHANDRASEKAR.D.pdf" download class="download-button">Download My Resume</a>
+    <a href="resume/Chandrasekar.D WebDeveloper.pdf" download class="download-button">Download My Resume</a>
 </section>
 
 
@@ -448,7 +448,7 @@
         <div style="margin-bottom: 20px;">
             <p style="font-size: 18px; color: #007bff; margin-bottom: 5px;"><strong>Email:</strong></p>
             <a href="mailto:chandrasekarcse321@gmail.com" style="color: #007bff; text-decoration: none; font-size: 16px;">
-                chandrasekarcse321@gmail.com
+                chandrasekarcse421@gmail.com
             </a>
         </div>
         <div style="margin-bottom: 20px;">
@@ -497,7 +497,7 @@
 <!-- Footer -->
 <footer>
     <p>&copy; 2024 <span style="color:green;">CHANDRASEKAR.D</span>. All rights reserved.</p>
-    <a href="resume/CHANDRASEKAR.D.pdf" download class="download-button">Download My Resume</a>
+    <a href="resume/Chandrasekar.D WebDeveloper.pdf" download class="download-button">Download My Resume</a>
 </footer>
 
 <script>
