--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -281,7 +281,7 @@
         <h2 style="font-size: 36px; color: #007bff;">Welcome to My Portfolio!</h2>
         <p style="font-size: 20px; color: #333; text-align: justify;">
             I’m <span style="font-weight: bold; color: #ff6347;">Chandrasekar D</span>, 
-            a passionate <span style="font-style: italic; color: #007bff;">Software Developer</span> 
+            a passionate <span style="font-style: italic; color: #007bff;">Web Developer</span> 
             specializing in crafting innovative solutions and building seamless digital experiences.
             <br><br>
             <span style="font-weight: bold;">Scroll down</span> to explore my projects, skills, and 
@@ -296,7 +296,7 @@
         
         <div style="max-width:90%; margin: 0 auto; background-color: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
             <p  style="font-size: 18px;  text-align:justify; color: #333; line-height: 1.6;">
-                I'm <strong style="color: #ff6347;">Chandrasekar D</strong>, a dedicated <span style="color: #007bff; font-weight: bold;">Software Developer</span> with a passion for solving complex problems through technology. 
+                I'm <strong style="color: #ff6347;">Chandrasekar D</strong>, a dedicated <span style="color: #007bff; font-weight: bold;">Web Developer</span> with a passion for solving complex problems through technology. 
                 With a solid foundation in <strong>HTML, CSS, Bootstrap, SQL,</strong> and <strong>Python</strong>, I specialize in creating efficient, scalable, and user-centric applications.
             </p>
     
@@ -433,7 +433,7 @@
 <!-- Resume Section -->
 <section class="resume-container">
     <h2>My Resume</h2>
-    <iframe src="./resume/CHANDRASEKAR.D.pdf" type="application/pdf"></iframe>
+    <iframe src="./resume/Chandrasekar.D WebDeveloper.pdf" type="application/pdf"></iframe>
     <a href="resume/Chandrasekar.D WebDeveloper.pdf" download class="download-button">Download My Resume</a>
 </section>
 
