--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -268,7 +268,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="/resume/Chandrasekar.D WebDeveloper.pdf" download class="download-button">Download My Resume</a><br>
+        <li><a href="/resume/Chandrasekar.D.pdf" download class="download-button">Download My Resume</a><br>
             
         </li>
 
@@ -433,8 +433,8 @@
 <!-- Resume Section -->
 <section class="resume-container">
     <h2>My Resume</h2>
-    <iframe src="./resume/Chandrasekar.D WebDeveloper.pdf" type="application/pdf"></iframe>
-    <a href="resume/Chandrasekar.D WebDeveloper.pdf" download class="download-button">Download My Resume</a>
+    <iframe src="./resume/Chandrasekar.D.pdf" type="application/pdf"></iframe>
+    <a href="resume/Chandrasekar.D.pdf" download class="download-button">Download My Resume</a>
 </section>
 
 
@@ -497,7 +497,7 @@
 <!-- Footer -->
 <footer>
     <p>&copy; 2024 <span style="color:green;">CHANDRASEKAR.D</span>. All rights reserved.</p>
-    <a href="resume/Chandrasekar.D WebDeveloper.pdf" download class="download-button">Download My Resume</a>
+    <a href="resume/Chandrasekar.D.pdf" download class="download-button">Download My Resume</a>
 </footer>
 
 <script>
