--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="resume/sekar.png" type="image/x-icon">
 
     <style>
-        /* General styles */
+       
         * {
             margin: 0;
             padding: 0;
@@ -268,6 +268,11 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><select>
+            <option>Learn Documents </option>
+            <option value="git"><a href="./Git.html">Git&gitup</a> </option>
+            <option>Upcomming...! </option>
+        </select>
         <li><a href="/resume/Chandrasekar.D.pdf" download class="download-button">Download My Resume</a><br>
             
         </li>
@@ -552,6 +557,7 @@
 
 </body>
 </html>
+
 
 
 
