--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -268,11 +268,14 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><select>
-            <option>Learn Documents </option>
-            <option value="git"><a href="./Git.html">Git&gitup</a> </option>
-            <option>Upcomming...! </option>
-        </select>
+       <li> <label for="myOptions">Learn Documents</label>
+<select id="myOptions" name="myOptions" multiple size="40">
+  <option value="option1"><a href="./Git.html">Git&gitup</a></option>
+  <option value="option2">Upcomming...! </option>
+
+</select>
+           </li>
+        
         <li><a href="/resume/Chandrasekar.D.pdf" download class="download-button">Download My Resume</a><br>
             
         </li>
@@ -557,6 +560,7 @@
 
 </body>
 </html>
+
 
 
 
