--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -270,7 +270,7 @@
         <li><a href="#contact">Contact</a></li>
        <li> <label for="myOptions">Learn Documents</label>
 <select id="myOptions" name="myOptions" multiple size="40">
-  <option value="option1"><a href="./Git.html">Git&gitup</a></option>
+  <a href="./Git.html"><option value="option1">Git&gitup</option></a>
   <option value="option2">Upcomming...! </option>
 
 </select>
@@ -560,6 +560,7 @@
 
 </body>
 </html>
+
 
 
 
