--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -15,10 +15,10 @@
 
         .dropdown-btn {
             text-decoration: none;
-            color: #333;
+            color: green;
             font-weight: 500;
-            background: none;
-            border: none;
+            background: blue ;
+            border:2px solid yellow;
             font-size: 1rem;
             cursor: pointer;
             padding: 0.5rem 1rem;
@@ -37,6 +37,7 @@
             top: 100%;
             left: 0;
             background: white;
+            color:black;
             min-width: 220px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             border-radius: 8px;
@@ -654,6 +655,7 @@
 
 </body>
 </html>
+
 
 
 
