--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -36,7 +36,7 @@
             position: absolute;
             top: 100%;
             left: 0;
-            background: white;
+            background:blue;
             color:black;
             min-width: 220px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -350,12 +350,13 @@
        <div class="dropdown">
                 <button class="dropdown-btn">Courses ▼</button>
                 <div class="dropdown-content">
-                    <a href="web-development.html">🌐 Web Development</a>
+                    <!-- <a href="./Git.html">🌐 Web Development</a>
                     <a href="python.html">🐍 Python Programming</a>
-                    <a href="data-science.html">📊 Data Science</a>
-                    <a href="machine-learning.html">🤖 Machine Learning</a>
-                    <a href="mobile-app.html">📱 Mobile App Development</a>
-                    <a href="cyber-security.html">🔐 Cyber Security</a>
+                    <a href="data-science.html">📊 Data Science</a> -->
+                    <a href="./Git.html">🤖 Git Learning</a>
+                    <!-- <a href="mobile-app.html">📱 Mobile App Development</a> -->
+                    <!-- <a href="cyber-security.html">🔐 Cyber Security</a> -->
+                    <p>Upcoming....!</p>
                 </div>
             </div>
         <script>
@@ -655,6 +656,7 @@
 
 </body>
 </html>
+
 
 
 
