--- a/sekar/Git.html
+++ b/sekar/Git.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>-CHANDRASEKAR.D-Git & GitHub Visual Guide</title>
+     <link rel="icon" href="resume/sekar.png" type="image/x-icon">
     <style>
         * {
             margin: 0;
