--- a/sekar/index.html
+++ b/sekar/index.html
@@ -217,7 +217,7 @@ function startCountdown() {
 
         if (timeLeft < 0) {
             clearInterval(countdownInterval); // Stop the countdown
-            window.location.href = "sekar/portfolio/chandrasekar.html"; // Redirect to another page
+            window.location.href = "/portfolio/chandrasekar.html"; // Redirect to another page
         }
     }, 1000); // Decrease time every second (1000ms)
 }
@@ -225,3 +225,4 @@ function startCountdown() {
 
 </body>
 </html>
+
