--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -355,7 +355,7 @@
         <li><a href="/resume/Chandrasekar.D.pdf" download class="download-button">Download My Resume</a><br>
             
         </li>
-
+         <li style="margin-right:"5px" ><a href="https://chandrasekarweb.netlify.app/">Logout</a></li>
     </ul>
 </nav>
 
@@ -636,6 +636,7 @@
 
 </body>
 </html>
+
 
 
 
