--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -374,7 +374,16 @@
             the expertise I bring to the world of technology.
         </p>
     </section>
-    
+
+    <marquee style="width:100%; height:100px; position:fixed; margin-bottom:0px;">
+    <section>
+         <div class="card">
+       <h1>Git Learning Notes</h1>
+         <button type="text"><a href="https://chandrasekarweb.netlify.app/sekar/portfolio/git">Git Learning</a></button>
+    </div>
+    </section>
+
+    </marquee>
 
 
     <section id="about" style="padding: 30px 20px; background-color: #f7f9fc;">
@@ -577,10 +586,7 @@
     </script>
 
 
-    <div>
-       <h1>Git Learning Notes</h1>
-         <button type="text"><a href="https://chandrasekarweb.netlify.app/sekar/portfolio/git">Git Learning</a></button>
-    </div>
+   
 </section>
 
 
@@ -645,6 +651,7 @@
     
 </body>
 </html>
+
 
 
 
