--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -375,7 +375,7 @@
         </p>
     </section>
 
-    <marquee style="width:100%; height:100px; position:fixed; margin-bottom:0px;">
+    <marquee style="width:100%; height:100px;  margin-bottom:0px; z-index:2; ">
     <section>
          <div class="card">
        <h1>Git Learning Notes</h1>
@@ -651,6 +651,7 @@
     
 </body>
 </html>
+
 
 
 
