--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -532,7 +532,19 @@
                     <p>Live mysql and php of Uibo rendal App working to pre company. <a href="https://rentspot.uiboinfotech.com/user.php" target="_blank">Visit Site</a></p>
                 </div>
             </div>
+
+
+            <div class="slide">
+                <div class="iframe-widget">
+                    <iframe src="https://68db8cf6af6ed0619eaf9c0d--frolicking-salmiakki-0b6f86.netlify.app/admin/" title="rendal system App" loading="lazy" allowfullscreen referrerpolicy="no-referrer"></iframe>
+                </div>
+                <div class="slide-info">
+                    <p>Live  HTML ,CSS,JS CRUD OF STUDENTS DETAILS <a href="https://68db8cf6af6ed0619eaf9c0d--frolicking-salmiakki-0b6f86.netlify.app/admin/" target="_blank">Visit Site</a></p>
+                </div>
+            </div>
         </div>
+
+        
         
         <div class="slider-controls">
             <button class="slider-btn" id="prevBtn">← Previous</button>
@@ -794,3 +806,4 @@
 
 </body>
 </html>
+
