--- a/sekar/portfolio/Git.html
+++ b/sekar/portfolio/Git.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git & GitHub Visual Guide</title>
+     <link rel="icon" href="resume/sekar.png" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -135,7 +136,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 Git & GitHub Complete Learning Guide</h1>
+        <span style="position: relative;">
+            <img src="resume/profile.png" style="width: 40px; height: 40px; border-radius: 5%; margin-right: 10px;">
+        </span>
+        <h1>🚀 Git & GitHub Complete Learning Guide  <span><a href="https://chandrasekarweb.netlify.app/sekar/portfolio/chandrasekar">Back To portfolio</a></span></h1>
         
         <div class="nav-buttons">
             <button class="nav-btn active" onclick="showSection(0)">Basic Concepts</button>
