--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -17,6 +17,7 @@
 .content.expanded {
   max-height: 1000px; /* or any large value to show full content */
 }
+        </style>
 
 </head>
 <body>
@@ -621,5 +622,6 @@ Thanking You.
 
 </body>
 </html>
+
 
 
