--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="slide-info">
                     <p><strong>சான்றோர்குல நாடார் திருமண தகவல் மையம்</strong> - Matrimony Website  <a href="https://sknmandapam.com/matrimony/" target="_blank">Visit Site</a></p>
-                    <P style='text-align:justify' class="content" id="myContent">
+                    <P style='text-align:justify' id="myContent">
                         I developed a Matrimony Web Application in the Matrimony domain. Users can create profiles, search matches, and send interest requests.<br>
                         My Role is I worked as frontend developer, building interactive UI components, managing user data using Mysql, and integrating backend APIs.<br> 
                         Tech Stack: HTML5, CSS, PHP, Git,SQL.<br>
@@ -218,6 +218,13 @@ btn.addEventListener("click", () => {
             </div>
 
             <div style="flex-basis: 200px; padding: 20px; background-color: white; margin: 10px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                <h3 style="color: #007bff;">Reactjs</h3>
+                <p style="font-size: 16px; color: #666; line-height: 1.6;">
+                    ReactJs  for UI design, State management. Experienced with relational  static and dynamic  for optimizing and managing data flow.
+                </p>
+            </div>
+
+            <div style="flex-basis: 200px; padding: 20px; background-color: white; margin: 10px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                 <h3 style="color: #007bff;">SQL</h3>
                 <p style="font-size: 16px; color: #666; line-height: 1.6;">
                     Solid understanding of SQL for database design, querying, and management. Experienced with relational databases for optimizing and managing data flow.
@@ -270,15 +277,8 @@ btn.addEventListener("click", () => {
             <img src="certificate/CHAT GPT.png" alt="ChatGPT Certificate">
             <p>CHATGPT BASICS</p>
         </div>
-        <div class="certificate">
-            <img src="certificate/Internship.jpg" alt="ChatGPT Certificate">
-            <p>Web Design Intership-2023</p>
-        </div>
-
-        <div class="certificate">
-            <img src="certificate/Appoinment.jpg" alt="ChatGPT Certificate">
-            <p>Web Design Appointment-2023</p>
-        </div>
+       
+        
     </div>
 </section>
 
@@ -622,6 +622,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
