--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="resume/sekar.png" type="image/x-icon">
     <style>
    
-        *{margin:0;padding:0;box-sizing:border-box;}
+        *{margin:0;padding:0;box-sizing:border-box; }
         body{font-family:'Arial',sans-serif;line-height:1.6;}
         nav{display:flex;justify-content:space-between;align-items:center;padding:20px;background-color:#333;position:sticky;top:0;z-index:1000;}
         nav h1{color:white;font-size:24px;}
@@ -27,12 +27,14 @@
         .hamburger{display:none;flex-direction:column;cursor:pointer;z-index:1001;}.hamburger div{width:25px;height:3px;background-color:white;margin:4px;transition:all 0.3s ease;}.hamburger.active div:nth-child(1){transform:rotate(-45deg) translate(-5px,6px);}.hamburger.active div:nth-child(2){opacity:0;}.hamburger.active div:nth-child(3){transform:rotate(45deg) translate(-5px,-6px);}@media (max-width:768px){.nav-links{display:none;flex-direction:column;width:100%;background-color:#333;position:absolute;top:70px;left:0;text-align:center;}.nav-links.open{display:flex;}.nav-links li{margin:10px 0;}.hamburger{display:flex;}.dropdown-menu{position:static;display:none;background-color:#555;margin:0;box-shadow:none;}.dropdown.active .dropdown-menu{display:block;}.dropdown-toggle::after{content:'▼';}.dropdown.active .dropdown-toggle::after{transform:rotate(180deg);}}section{padding:80px 20px;text-align:center;}#home{background-color:#f0f4f8;}#about{background-color:#ddd;}#projects{background-color:#bbb;}#skills{background-color:#999;}#contact{background-color:#777;}button{background-color:#007bff;color:white;padding:12px 20px;border:none;border-radius:5px;font-size:16px;cursor:pointer;transition:background-color 0.3s;}button:hover{background-color:#0056b3;}.slider-container{max-width:1200px;margin:60px auto;padding:20px;position:relative;overflow:hidden;}.slider-wrapper{display:flex;transition:transform 0.5s ease-in-out;}.slide{min-width:100%;display:flex;justify-content:center;align-items:center;flex-direction:column;}.iframe-widget{width:100%;max-width:900px;height:600px;margin:12px auto;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.12);overflow:auto;background:#fff;position:relative;}.iframe-widget iframe{width:100%;height:100%;border:0;display:block;transform-origin:0 0;}@media (max-width:768px){.iframe-widget{max-width:95vw;height:70vh;min-height:400px;}.iframe-widget iframe{width:100%;height:100%;}}.slide-info{margin-top:20px;font-size:18px;color:#333;}.slide-info a{color:#007bff;text-decoration:none;font-weight:bold;}.slide-info a:hover{text-decoration:underline;}.slider-controls{display:flex;justify-content:center;gap:20px;margin-top:30px;}.slider-btn{background-color:#007bff;color:white;border:none;padding:12px 24px;border-radius:5px;cursor:pointer;font-size:16px;transition:background-color 0.3s;}.slider-btn:hover{background-color:#0056b3;}.slider-btn:disabled{background-color:#ccc;cursor:not-allowed;}.slider-dots{display:flex;justify-content:center;gap:10px;margin-top:20px;}.dot{width:12px;height:12px;border-radius:50%;background-color:#ccc;cursor:pointer;transition:background-color 0.3s;}.dot.active{background-color:#007bff;}.resume-container{max-width:800px;margin:0 auto;background-color:white;padding:20px;border-radius:8px;box-shadow:0 0 10px rgba(0,0,0,0.1);}.resume-container h2{margin-bottom:20px;color:#333;}.resume-container iframe{width:100%;height:600px;border:none;margin-bottom:20px;}.download-button{display:inline-block;background-color:#007bff;color:white;padding:12px 20px;border:none;border-radius:5px;font-size:16px;cursor:pointer;text-decoration:none;text-align:center;transition:background-color 0.3s;}.download-button:hover{background-color:#0056b3;}#certificates{background-color:#eee;padding:60px 20px;}.certificate-gallery{display:flex;flex-wrap:wrap;gap:20px;justify-content:center;}.certificate{width:300px;height:auto;border:1px solid #ddd;border-radius:8px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,0.1);}.certificate img{width:100%;height:auto;}.certificate p{padding:10px;text-align:center;}@keyframes fadeIn{from{opacity:0;}to{opacity:1;}}#home h2{font-size:36px;color:#007bff;animation:fadeIn 1.5s ease-in-out;}#home p{font-size:20px;color:#333;animation:fadeIn 2s ease-in-out;}footer{padding:20px;background-color:#333;color:white;text-align:center;margin-top:20px;}.eye-icon-container{position:fixed;bottom:30px;right:30px;z-index:999;}.eye-icon{width:60px;height:60px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 4px 15px rgba(102,126,234,0.4);transition:all 0.3s ease;animation:pulse 2s infinite;}.eye-icon:hover{transform:scale(1.1);box-shadow:0 6px 20px rgba(102,126,234,0.6);}.eye-icon svg{width:30px;height:30px;fill:white;}@keyframes pulse{0%,100%{box-shadow:0 4px 15px rgba(102,126,234,0.4);}50%{box-shadow:0 4px 25px rgba(102,126,234,0.7);}}.intro-modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:1000;justify-content:center;align-items:center;animation:fadeIn 0.3s ease;}.intro-modal.active{display:flex;}.modal-content{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);padding:40px;border-radius:20px;max-width:600px;max-height:85vh;width:90%;position:relative;box-shadow:0 10px 40px rgba(0,0,0,0.3);animation:slideUp 0.4s ease;color:white;overflow-y:auto;overflow-x:hidden;}.modal-content::-webkit-scrollbar{width:8px;}.modal-content::-webkit-scrollbar-track{background:rgba(255,255,255,0.1);border-radius:10px;}.modal-content::-webkit-scrollbar-thumb{background:rgba(255,255,255,0.5);border-radius:10px;}.modal-content::-webkit-scrollbar-thumb:hover{background:rgba(255,255,255,0.7);}@keyframes slideUp{from{transform:translateY(100px);opacity:0;}to{transform:translateY(0);opacity:1;}}.modal-close{position:absolute;top:15px;right:20px;font-size:30px;cursor:pointer;color:white;transition:all 0.3s;}.modal-close:hover{transform:rotate(90deg);color:#ff6347;}.modal-header{text-align:center;margin-bottom:20px;}.modal-header img{width:100px;height:100px;border-radius:50%;border:4px solid white;margin-bottom:15px;box-shadow:0 4px 15px rgba(0,0,0,0.2);}.modal-header h2{font-size:28px;margin-bottom:5px;}.modal-header p{font-size:18px;opacity:0.9;}.modal-body{text-align:left;line-height:1.8;font-size:16px;}.modal-body p{margin-bottom:15px;}.modal-stats{display:flex;justify-content:space-around;margin-top:25px;padding-top:20px;border-top:2px solid rgba(255,255,255,0.3);}.stat-item{text-align:center;}.stat-item h3{font-size:24px;margin-bottom:5px;}.stat-item p{font-size:14px;opacity:0.9;}@media (max-width:768px){.eye-icon-container{bottom:20px;right:20px;}.eye-icon{width:50px;height:50px;}.modal-content{padding:30px 20px;}.modal-header h2{font-size:24px;}.modal-stats{flex-direction:column;gap:15px;}}@media (max-width:400px){.iframe-widget{max-width:98vw;height:65vh;min-height:350px;margin:8px auto;}}@media (max-width:768px){.slider-container{padding:10px;}.slider-controls{gap:10px;}.slider-btn{padding:10px 16px;font-size:14px;}.slide-info{font-size:16px;padding:0 10px;}}
 .content {
   max-height: 80px;
-  max-width:200px;
+text-align:justify;
  padding:5px;
   overflow: hidden;
   transition: max-height 0.8s ease;
 }
-
+p{
+    text-align:justify;
+}
 .content.expanded {
   max-height: 400px; 
 }
@@ -157,8 +159,8 @@
             </div>
             
            
-            <div class="slide">
-                <div class="iframe-widget" style="margin:10px;">
+            <div class="slide" style="padding:10px;">
+                <div class="iframe-widget" >
                     <iframe src="https://sknmandapam.com/matrimony/" title="Matrimony Website" loading="lazy" allowfullscreen referrerpolicy="no-referrer"></iframe>
                 </div>
                 <div class="slide-info">
@@ -641,6 +643,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
