--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -67,6 +67,8 @@ p{
                 <a href="#project-rentspot">RentSpot - Rental System</a>
                 <a href="#project-matrimony">Matrimony Website</a>
                 <a href="#live-projects">Live Project Demos</a>
+                 <a href="https://chandrasekarweb.netlify.app/sekar/portfolio/git">Learn Git</a>
+                
             </div>
         </li>
         
@@ -643,6 +645,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
