--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -68,6 +68,7 @@ p{
                 <a href="#project-matrimony">Matrimony Website</a>
                 <a href="#live-projects">Live Project Demos</a>
                  <a href="https://chandrasekarweb.netlify.app/sekar/portfolio/git">Learn Git</a>
+                <a href="../introredux.html">Learn Redux</a>
                 
             </div>
         </li>
@@ -645,6 +646,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
