--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -69,6 +69,7 @@ p{
                 <a href="#live-projects">Live Project Demos</a>
                  <a href="https://chandrasekarweb.netlify.app/sekar/portfolio/git">Learn Git</a>
                 <a href="../introredux.html">Learn Redux</a>
+                <a href="ChildRedux.html">Child Redux Flow</a>
                 
             </div>
         </li>
@@ -646,6 +647,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
