--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -13,7 +13,7 @@
 
         {margin:0;padding:0;box-sizing:border-box; }
         body{font-family:'Arial',sans-serif;line-height:1.6;}
-        nav{ width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px;background-color:#333;position:sticky;top:0;z-index:1000;}
+        nav{ display:flex;justify-content:space-between;align-items:center;padding:20px;background-color:#333;position:sticky;top:0;z-index:1000;}
         nav h1{color:white;font-size:24px;}
         .nav-links{display:flex;list-style-type:none;transition:all 0.3s ease;}
         .nav-links li{margin-left:20px;position:relative;}
@@ -697,6 +697,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
