--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -11,10 +11,10 @@
 
  
 
-        {margin:0;padding:0;box-sizing:border-box; }
+        *{margin:0;padding:0;box-sizing:border-box; }
         body{font-family:'Arial',sans-serif;line-height:1.6;}
         nav{ display:flex;justify-content:space-between;align-items:center;padding:20px;background-color:#333;position:sticky;top:0;z-index:1000;}
-        nav h1{color:white;font-size:24px;}
+        nav h1{color:white;font-size:20px;}
         .nav-links{display:flex;list-style-type:none;transition:all 0.3s ease;}
         .nav-links li{margin-left:20px;position:relative;}
         .nav-links a{color:white;text-decoration:none;font-size:18px;padding:8px 12px;transition:background-color 0.3s ease;display:block;}
@@ -697,6 +697,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
