--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -187,7 +187,7 @@ p{
 
 
 <section id="live-projects" style="background-color: #f7f9fc; padding: 60px 20px;">
-    <h2 style="font-size: 36px; color: #007bff; text-align: center; margin-bottom: 40px;">Live Project Demos</h2>
+    <h2 style="font-size: 36px; color: #007bff; text-align: center; margin-bottom: 40px;">Live Project.....!</h2>
     
     <div class="slider-container">
         <div class="slider-wrapper" id="sliderWrapper">
@@ -697,6 +697,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
