--- a/sekar/portfolio/RPA.html
+++ b/sekar/portfolio/RPA.html
@@ -331,6 +331,7 @@
                 <div class="platform-card">
                     <div class="platform-header">
                         <div class="platform-logo">🤖</div>
+                         <div class="platform-logo"><a hret="RPALEARN.html">LEARN RPA</div>
                         <div class="platform-name">
                             <h3>UiPath Academy</h3>
                             <span class="platform-tag">100% இலவசம்</span>
