--- a/sekar/portfolio/chandrasekar.html
+++ b/sekar/portfolio/chandrasekar.html
@@ -359,6 +359,7 @@ btn.addEventListener("click", () => {
 
 <section class="resume-container">
     <h2>My Resume</h2>
+    <a href="../java.html">java</a>
     <iframe src="./resume/Chandrasekar.D.pdf" type="application/pdf"></iframe>
     <a href="resume/Chandrasekar.D.pdf" download class="download-button">Download My Resume</a>
 </section>
@@ -482,7 +483,7 @@ Thanking You.
 
             <div class="modal-stats">
                 <div class="stat-item">
-                    <h3>8Month</h3>
+                    <h3>1 Year</h3>
                     <p>Years Experience web design and developed</p>
                 </div>
                 <div class="stat-item">
@@ -492,6 +493,7 @@ Thanking You.
                 <div class="stat-item">
                     <h3>100%</h3>
                     <p>Dedication</p>
+                    
                 </div>
             </div>
             
@@ -697,6 +699,7 @@ Thanking You.
 
 </body>
 </html>
+
 
 
 
